SERVER-30251 Fix handling of JSON Schema type keyword for missing fields.