jstests/core/json_schema.js
@@ -12,6 +12,7 @@
     assert.writeOK(coll.insert({_id: 5, num: NumberLong(-1)}));
     assert.writeOK(coll.insert({_id: 6, num: {}}));
     assert.writeOK(coll.insert({_id: 7, num: "str"}));
+    assert.writeOK(coll.insert({_id: 8}));
 
     // Test that $jsonSchema fails to parse if its argument is not an object.
     assert.throws(function() {
@@ -53,57 +54,57 @@
     });
 
     // Test that the empty schema matches everything.
-    assert.eq(8, coll.find({$jsonSchema: {}}).itcount());
+    assert.eq(9, coll.find({$jsonSchema: {}}).itcount());
 
     // Test that a schema just checking that the type of stored documents is "object" is legal and
     // matches everything.
-    assert.eq(8, coll.find({$jsonSchema: {type: "object"}}).itcount());
+    assert.eq(9, coll.find({$jsonSchema: {type: "object"}}).itcount());
 
     // Test that schemas whose top-level type is not object matches nothing.
     assert.eq(0, coll.find({$jsonSchema: {type: "string"}}).itcount());
     assert.eq(0, coll.find({$jsonSchema: {type: "long"}}).itcount());
     assert.eq(0, coll.find({$jsonSchema: {type: "objectId"}}).itcount());
 
-    // Test that type:"number" only matches numbers.
-    assert.eq([{_id: 0}, {_id: 1}, {_id: 2}, {_id: 3}, {_id: 4}, {_id: 5}],
+    // Test that type:"number" only matches numbers, or documents where the field is missing.
+    assert.eq([{_id: 0}, {_id: 1}, {_id: 2}, {_id: 3}, {_id: 4}, {_id: 5}, {_id: 8}],
               coll.find({$jsonSchema: {properties: {num: {type: "number"}}}}, {_id: 1})
                   .sort({_id: 1})
                   .toArray());
 
     // Test that maximum restriction is enforced correctly.
-    assert.eq([{_id: 1}, {_id: 3}, {_id: 5}],
+    assert.eq([{_id: 1}, {_id: 3}, {_id: 5}, {_id: 8}],
               coll.find({$jsonSchema: {properties: {num: {type: "number", maximum: -1}}}}, {_id: 1})
                   .sort({_id: 1})
                   .toArray());
 
     // Repeat the test, but include an explicit top-level type:"object".
     assert.eq(
-        [{_id: 1}, {_id: 3}, {_id: 5}],
+        [{_id: 1}, {_id: 3}, {_id: 5}, {_id: 8}],
         coll.find({$jsonSchema: {type: "object", properties: {num: {type: "number", maximum: -1}}}},
                   {_id: 1})
             .sort({_id: 1})
             .toArray());
 
-    // Test that type:"long" only matches longs.
-    assert.eq([{_id: 4}, {_id: 5}],
+    // Test that type:"long" only matches longs, or documents where the field is missing.
+    assert.eq([{_id: 4}, {_id: 5}, {_id: 8}],
               coll.find({$jsonSchema: {properties: {num: {type: "long"}}}}, {_id: 1})
                   .sort({_id: 1})
                   .toArray());
 
     // Test that maximum restriction is enforced correctly with type:"long".
-    assert.eq([{_id: 5}],
+    assert.eq([{_id: 5}, {_id: 8}],
               coll.find({$jsonSchema: {properties: {num: {type: "long", maximum: 0}}}}, {_id: 1})
                   .sort({_id: 1})
                   .toArray());
 
     // Test that maximum restriction without a numeric type specified only applies to numbers.
-    assert.eq([{_id: 1}, {_id: 3}, {_id: 5}, {_id: 6}, {_id: 7}],
+    assert.eq([{_id: 1}, {_id: 3}, {_id: 5}, {_id: 6}, {_id: 7}, {_id: 8}],
               coll.find({$jsonSchema: {properties: {num: {maximum: 0}}}}, {_id: 1})
                   .sort({_id: 1})
                   .toArray());
 
     // Test that maximum restriction does nothing if a non-numeric type is also specified.
-    assert.eq([{_id: 7}],
+    assert.eq([{_id: 7}, {_id: 8}],
               coll.find({$jsonSchema: {properties: {num: {type: "string", maximum: 0}}}}, {_id: 1})
                   .sort({_id: 1})
                   .toArray());
